# project-tiro

./: .gitignore  CLAUDE.md  LICENSE  PRODUCT_ROADMAP.md  PROJECT_TIRO_SPEC.md  README.md  config.example.yaml  config.yaml  pyproject.toml  run.py
docs/: PLAYWRIGHT_TEST_NOTES.md
docs/plans/: 2026-02-15-tts-audio-player-design.md  2026-02-15-tts-audio-player-plan.md
extension/: manifest.json  popup.html  popup.js
scripts/: import_emails.py  seed_articles.py
tiro/: __init__.py  app.py  cli.py  config.py  database.py  decay.py  export.py  stats.py  tts.py  vectorstore.py
tiro/api/: routes_articles.py  routes_audio.py  routes_classify.py  routes_decay.py  routes_digest.py  routes_digest_email.py  routes_export.py  routes_filters.py  routes_graph.py  routes_ingest.py  routes_search.py  routes_settings.py  routes_sources.py  routes_stats.py
tiro/frontend/static/: app.js  reader.js  styles.css
tiro/frontend/static/themes/: papyrus.css  roman-night.css
tiro/frontend/templates/: base.html  digest.html  graph.html  inbox.html  index.html  reader.html  settings.html  stats.html
tiro/ingestion/: email.py  extractors.py  imap.py  processor.py  web.py
tiro/intelligence/: analysis.py  digest.py  email_digest.py  preferences.py  prompts.py
tiro/mcp/: server.py
tiro/search/: semantic.py
