[project]
name = "tiro-reader"
version = "0.1.0"
description = "A local-first, open-source reading OS for the AI age"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ege Beyaztas" },
]
keywords = ["reading", "ai", "local-first", "markdown", "claude", "opus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.14.1",
    "chromadb>=0.6.3",
    "sentence-transformers>=3.4.1",
    "anthropic>=0.43.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "mcp>=1.25",
]

[project.urls]
Homepage = "https://github.com/esagduyu/project-tiro"
Repository = "https://github.com/esagduyu/project-tiro"

[project.scripts]
tiro = "tiro.cli:main"
tiro-mcp = "tiro.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["tiro"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
